  - Fixed: Absolutely positioned screen background images not working
	  (WEBCONSOLE-85)
  - Fixed: ImageProxy should return the requested url in the same format
    as it is stored rather than trying to convert it to PNG format (WEBCONSOLE-87)
  - Fixed: Possible Null reference exception at startup trying
    to determine the default console size (WEBCONSOLE-88)

New features:

  - Increase timeouts for REST calls to help with slow connections
    (WEBCONSOLE-80)
  - Enhance user configuration options (WEBCONSOLE-83)
  - Make the web view widget interactive so that mouse clicks etc.
	  are passed through (WEBCONSOLE-86)
  - Add persistence for console orientation (WEBCONSOLE-89)

WebConsole 2.1.3
================

Fixes:

  - Fixed : Console fails to load in Chrome on Mac (WEBCONSOLE-60)
  - Fixed : Console fails to load when cookies are disabled (WEBCONSOLE-61)
  - Fixed : Console fails to load in QtWebkit Browser (WEBCONSOLE-62)
  - Fixed : Having a button with both a navigation and command,
    the navigation occurs but the command is not executed (WEBCONSOLE-64)
  - Fixed : Thumb rendered on slider, even "empty" png file
    has been assigned as thumb image (WEBCONSOLE-65)
  - Fixed : Incorrect SVN build reported by WebConsole (WEBCONSOLE-66)
  - Fixed : Controller discovery icon continues to indicate
    that discovery is in progress when it fails for some reason
    (WEBCONSOLE-69)
  - Fixed : Loading spinner not animating on certain browser versions 
    (WEBCONSOLE-70)
  - Code cleaning (WEBCONSOLE-79)
  - Fixed : Widgets fail to display on qtEmbedded browser (WEBCONSOLE-77)

New features:

  - Support relative URLs in the web view widget (WEBCONSOLE-71)
  - Add GET parameters to specify a controller
    and panel combination to load at startup (WEBCONSOLE-72)
  - Update ANT build configuration to abort build
    if revision is not found from SVN (WEBCONSOLE-73)
  - Add additional GET Parameters to allow more control